--- a/README
+++ b/README
@@ -1,8 +1,26 @@
 
-Install the fop maven plugin
+Mini project to track my CV so that various output formats can be generated.
 
-	svn checkout http://fop-maven-plugin.googlecode.com/svn/trunk/ fop-maven-plugin-read-only
-	
-	
+XML Format
+- I looked at xml resume but decided to us hr-xml in the end.
 
-	mvn ch.becompany:fop-maven-plugin:1.0-SNAPSHOT:fop
+xml -> html using hresume microformat.
+xml -> pdf
+
+To handle the transformation of the xml to output formats I am using 
+
+     http://code.google.com/p/docbkx-tools/
+
+docbkx:generate-pdf
+
+http://lab.madgex.com/hresume/
+     
+     http://gergo.erdi.hu/projects/cv-xsl/
+         
+     http://onesparrow.com/cv-page.html
+     
+     http://onesparrow.com/xhtml2fo.xsl
+     
+     http://gergo.erdi.hu/projects/cv-xsl/download/cv.xsl
+     
+     http://xmlgraphics.apache.org/fop/0.95/output.html#rtf
