--- a/README
+++ b/README
@@ -1,5 +1,17 @@
-This project allows me to maintains details of my working career in an XML format, to 
-which i then apply XSLT transforms to create PFD and github specific formats.
+The CV of emeraldjava
+=====================
+
+[![Build Status](https://travis-ci.org/emeraldjava/emeraldjava.svg?branch=master)](https://travis-ci.org/emeraldjava/emeraldjava)
+
+This project allows me to maintains details of my working career in an XML format, to which i then apply XSLT transforms to create PFD and github specific formats.
+
+I have a CI build process setup at
+
+    https://travis-ci.org/emeraldjava/emeraldjava/builds
+
+the next step is for this build to automatically update the github page at
+
+	http://emeraldjava.github.io/emeraldjava/
 
 Mini project to track my CV so that various output formats can be generated.
 
